--- a/index.css
+++ b/index.css
@@ -1,3 +1,21 @@
 html {
     background-color: aquamarine;
 }
+
+h1, p, .column {
+    text-align: center;
+}
+
+#vis {
+    background-color: white;
+}
+
+#controls {
+    margin: 10px;
+    display: flex;
+}
+
+.column {
+    flex: 1;
+    border: 1px solid black;
+}
